# khipro-library

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: release.yml
bindings/android/: CMakeLists.txt  gradlew  jni_bridge.cpp  settings.gradle.kts
bindings/android/samples/: JavaImeExample.java  KotlinImeExample.kt
bindings/web/: CMakeLists.txt  package-lock.json  package.json  tsconfig.json  wasm_shim.cpp
bindings/web/src/: index.ts
cmake/toolchains/: mingw-w64-64.cmake
container/: Dockerfile
core/: CMakeLists.txt
core/cmake/: khipro.def  khipro.pc.in  khiproConfig.cmake.in
core/src/: api.cpp  convert.cpp  convert.h  engine.cpp  engine.h  sexpr.cpp  sexpr.h  spec.cpp  spec.h
docs/: README.md  android.md  build-from-source.md  linux.md  macos.md  wasm.md  windows.md
resources/: khipro-testcases-touch.tsv
scripts/: build.sh
scripts/resources/: embed.py  fetch.sh  meta.py  meta.sh  sync.sh
scripts/targets/: android.sh  common.sh  linux.sh  macos.sh  stage.sh  wasm.sh  windows.sh
tests/: CMakeLists.txt  main.cpp
